--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -205,7 +205,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\Research_Setting.cpp" />
     <ClCompile Include="..\Classes\PlayGroundScene.cpp" />
     <ClCompile Include="..\Classes\step_pathfinder_Json_LoadNSaveScene.cpp" />
-    <ClCompile Include="..\Classes\Step01_RootScene.cpp" />
+    <ClCompile Include="..\Classes\step_pathfinder_RootScene.cpp" />
     <ClCompile Include="..\Classes\Step01_Tool_TerrainData.cpp" />
     <ClCompile Include="..\Classes\step_rain_of_chaos_animation_ComponentScene.cpp" />
     <ClCompile Include="..\Classes\step_rain_of_chaos_animation_CallbackScene.cpp" />
@@ -285,7 +285,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\Research_Setting.h" />
     <ClInclude Include="..\Classes\PlayGroundScene.h" />
     <ClInclude Include="..\Classes\step_pathfinder_Json_LoadNSaveScene.h" />
-    <ClInclude Include="..\Classes\Step01_RootScene.h" />
+    <ClInclude Include="..\Classes\step_pathfinder_RootScene.h" />
     <ClInclude Include="..\Classes\Step01_Tool_TerrainData.h" />
     <ClInclude Include="..\Classes\step_rain_of_chaos_animation_ComponentScene.h" />
     <ClInclude Include="..\Classes\step_rain_of_chaos_animation_CallbackScene.h" />
