--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -141,9 +141,6 @@
     <ClCompile Include="..\Classes\PlayGroundScene.cpp">
       <Filter>src\scene</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Step01_RootScene.cpp">
-      <Filter>src\scene\step_pathfinder</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\Step01_Game_PathFinder_PlayScene.cpp">
       <Filter>src\scene\step_pathfinder\game</Filter>
     </ClCompile>
@@ -318,6 +315,9 @@
     <ClCompile Include="..\Classes\step_pathfinder_Json_LoadNSaveScene.cpp">
       <Filter>src\scene\step_pathfinder\json</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_pathfinder_RootScene.cpp">
+      <Filter>src\scene\step_pathfinder</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -364,9 +364,6 @@
     </ClInclude>
     <ClInclude Include="..\Classes\PlayGroundScene.h">
       <Filter>src\scene</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Step01_RootScene.h">
-      <Filter>src\scene\step_pathfinder</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Step01_Game_PathFinder_PlayScene.h">
       <Filter>src\scene\step_pathfinder\game</Filter>
@@ -553,6 +550,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\step_pathfinder_Json_LoadNSaveScene.h">
       <Filter>src\scene\step_pathfinder\json</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_pathfinder_RootScene.h">
+      <Filter>src\scene\step_pathfinder</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
