--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -186,6 +186,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_clickclick_game_Stage.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_StageTestScene.cpp" />
     <ClCompile Include="..\Classes\step_pathfinder_json_LoadNSaveScene.cpp" />
+    <ClCompile Include="..\Classes\step_pathfinder_tool_ui_TileSelectNode.cpp" />
     <ClCompile Include="..\Classes\step_typetype_game_PlayScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_game_ResultScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_game_Stage.cpp" />
@@ -266,6 +267,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_clickclick_game_Stage.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_StageTestScene.h" />
     <ClInclude Include="..\Classes\step_pathfinder_json_LoadNSaveScene.h" />
+    <ClInclude Include="..\Classes\step_pathfinder_tool_ui_TileSelectNode.h" />
     <ClInclude Include="..\Classes\step_typetype_game_PlayScene.h" />
     <ClInclude Include="..\Classes\step_typetype_game_ResultScene.h" />
     <ClInclude Include="..\Classes\step_typetype_game_Stage.h" />
