--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -330,6 +330,9 @@
     <ClCompile Include="..\Classes\step_rain_of_chaos_collision_ComponentScene.cpp">
       <Filter>src\scene\step_04_rain_of_chaos\collision</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_rain_of_chaos_CollisionCollection.cpp">
+      <Filter>src\scene\step_04_rain_of_chaos\collision</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -573,6 +576,9 @@
       <Filter>src\scene\step_05_defender</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_rain_of_chaos_collision_ComponentScene.h">
+      <Filter>src\scene\step_04_rain_of_chaos\collision</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_rain_of_chaos_CollisionCollection.h">
       <Filter>src\scene\step_04_rain_of_chaos\collision</Filter>
     </ClInclude>
   </ItemGroup>
