--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -100,6 +100,9 @@
     <Filter Include="src\scene\step_05_rain_of_chaos\collision">
       <UniqueIdentifier>{e7745824-03e3-48c3-a6df-54dd91a6403f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\scene\step_04_mole\circle_collision">
+      <UniqueIdentifier>{84b3c0ef-8638-4a3c-b4a4-73fae4e2d165}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -312,17 +315,8 @@
     <ClCompile Include="..\Classes\step_rain_of_chaos_collision_CollectionScene.cpp">
       <Filter>src\scene\step_05_rain_of_chaos\collision</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\step_rain_of_chaos_collision_BasicScene.cpp">
-      <Filter>src\scene\step_05_rain_of_chaos\collision</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\step_rain_of_chaos_CollisionComponent.cpp">
-      <Filter>src\scene\step_05_rain_of_chaos\collision</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\step_defender_RootScene.cpp">
       <Filter>src\scene\step_05_defender</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\step_rain_of_chaos_collision_ComponentScene.cpp">
-      <Filter>src\scene\step_05_rain_of_chaos\collision</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\step_rain_of_chaos_CollisionCollection.cpp">
       <Filter>src\scene\step_05_rain_of_chaos\collision</Filter>
@@ -338,6 +332,15 @@
     </ClCompile>
     <ClCompile Include="..\Classes\step_mole_animation_CallbackScene.cpp">
       <Filter>src\scene\step_04_mole\animation</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\step_mole_collision_ComponentScene.cpp">
+      <Filter>src\scene\step_04_mole\circle_collision</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\step_mole_collision_BasicScene.cpp">
+      <Filter>src\scene\step_04_mole\circle_collision</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\step_mole_CollisionComponent.cpp">
+      <Filter>src\scene\step_04_mole\circle_collision</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -563,17 +566,8 @@
     <ClInclude Include="..\Classes\step_rain_of_chaos_collision_CollectionScene.h">
       <Filter>src\scene\step_05_rain_of_chaos\collision</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\step_rain_of_chaos_collision_BasicScene.h">
-      <Filter>src\scene\step_05_rain_of_chaos\collision</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\step_rain_of_chaos_CollisionComponent.h">
-      <Filter>src\scene\step_05_rain_of_chaos\collision</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\step_defender_RootScene.h">
       <Filter>src\scene\step_05_defender</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\step_rain_of_chaos_collision_ComponentScene.h">
-      <Filter>src\scene\step_05_rain_of_chaos\collision</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_rain_of_chaos_CollisionCollection.h">
       <Filter>src\scene\step_05_rain_of_chaos\collision</Filter>
@@ -589,6 +583,15 @@
     </ClInclude>
     <ClInclude Include="..\Classes\step_mole_animation_CallbackScene.h">
       <Filter>src\scene\step_04_mole\animation</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_mole_collision_BasicScene.h">
+      <Filter>src\scene\step_04_mole\circle_collision</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_mole_collision_ComponentScene.h">
+      <Filter>src\scene\step_04_mole\circle_collision</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_mole_CollisionComponent.h">
+      <Filter>src\scene\step_04_mole\circle_collision</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
