add scene : step - mole - game - object test scene

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -348,6 +348,9 @@
     <ClCompile Include="..\Classes\step_mole_game_StageTestScene.cpp">
       <Filter>src\scene\step_04_mole\game</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_mole_game_ObjectTestScene.cpp">
+      <Filter>src\scene\step_04_mole\game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -600,6 +603,9 @@
       <Filter>src\scene\step_04_mole\circle_collision</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_mole_game_StageTestScene.h">
+      <Filter>src\scene\step_04_mole\game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_mole_game_ObjectTestScene.h">
       <Filter>src\scene\step_04_mole\game</Filter>
     </ClInclude>
   </ItemGroup>
